# VeltrixDB

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARKING.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bench  IMPLEMENTATION_GUIDE.md  LICENSE  PERFORMANCE.md  README.md  admin  go.mod  go.sum  loadtest
.claude/: settings.json
adminapi/: admin.go  admin_test.go  guard.go  guard_test.go  ui.go
client/: client.go  pipeline.go  tcp.go  tcp_test.go
clients/: README.md
cluster/: epoch.go  epoch_test.go  failure_detection.go  failure_detection_test.go  gossip.go  gossip_test.go  node_replace_test.go  partition_map.go  partition_map_test.go  partition_transfer.go  rack_awareness_test.go  transfer_tls_test.go
consensus/: apply_batch_test.go  group_commit_test.go  membership.go  membership_test.go  notify_test.go  raft.go  raft_test.go  read_index.go  read_index_test.go  snapshot.go  snapshot_test.go  transport.go  transport_tls_test.go
cpp/: CMakeLists.txt
cpp/include/: allocator.hpp  art.hpp  batch_engine.hpp  defragmenter.hpp  ebpf_gc_throttle.h  index_entry.hpp  lirs_cache.hpp  lockfree_index.hpp  numa_topology.hpp  scheduler.hpp  shard.hpp  storage_bridge.hpp  storage_bridge_capi.h  uring_reader.hpp  vlog.hpp  write_path.hpp
cpp/src/: art.cpp  batch_engine.cpp  defragmenter.cpp  ebpf_gc_throttle.cpp  lirs_cache.cpp  numa_topology.cpp  scheduler.cpp  shard.cpp  storage_bridge.cpp  uring_reader.cpp  vlog.cpp  write_path.cpp
docs/: DR_RUNBOOK.md  README.md  SOC2_CONTROLS.md  TESTING_GUIDE.md  backup-restore.md  node-lifecycle.md  partitioning.md  redis-comparison.md  replication.md  storage.md
examples/: rag_semantic_search.py
grafana/: ci_dashboard.json  veltrixdb_complete_dashboard.json  veltrixdb_dashboard.json
hardware/: config.go  detect.go  disk_linux.go  disk_other.go  ram_linux.go  ram_other.go  tune_linux.go  tune_other.go
marketing/: linkedin.md  (+3 more)
(+157 files in other folders)
